fix bug with radio buttons not showing checked, and badge not updating correctly

--- a/src/components/RegisterForm/Form.scss
+++ b/src/components/RegisterForm/Form.scss
@@ -21,6 +21,9 @@
   .info:hover {
     background-color: darkgrey !important;
   }
+  .radio-input {
+    margin-right: 1.3rem;
+  }
 }
 .hvr-fade {
   display: inline-block;
